project/k8s/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: "matizaj101/auth-service:1.0.0"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
