project/k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
spec:
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
        - name: broker-service
          image:  "matizaj101/broker-service:1.0.1"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: broker-service
#spec:
#  selector:
#    app: broker-service
#  ports:
#    - protocol: TCP
#      name: main-port
#      port: 8080
#      targetPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
    - protocol: TCP
      name: main-port
      port: 8080
      targetPort: 8080
  type: LoadBalancer
