project/k8s/listener.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener-service
  template:
    metadata:
      labels:
        app: listener-service
    spec:
      containers:
        - name: listener-service
          image: "matizaj101/listener-service:1.0.0"

          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: listener-service
spec:
  selector:
    app: listener-service
  ports:
    - protocol: TCP
      name: main-port
      port: 27017
      targetPort: 27017
