project/k8s/mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail-service
  template:
    metadata:
      labels:
        app: mail-service
    spec:
      containers:
        - name: mongo
          image: "matizaj101/mail-service:1.0.0"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  selector:
    app: mail-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
