project/k8s/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-mongo
  template:
    metadata:
      labels:
        app: go-mongo
    spec:
      containers:
        - name: mongo
          image: "mongo"
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: go-mongo-svc
spec:
  selector:
    app: go-mongo-svc
  ports:
    - protocol: TCP
      name: main-port
      port: 27017
      targetPort: 27017
